# icfpc2024

./: ChangeLog.md  LICENSE  README.md  check.sh  flake.nix  fourmolu.yaml  progcon.cabal  stack.yaml
.github/workflows/: build.yml
app/: Main.hs
courses/: 3d.markdown  lambdaman.markdown  lambdaman.txt  spaceship.markdown  spaceship.txt
courses/spaceship/: 1.bytes  10.bytes  11.bytes  12.bytes  13.bytes  14.bytes  15.bytes  16.bytes  17.bytes  18.bytes  19.bytes  2.bytes  20.bytes  21.bytes  22.bytes  23.bytes  24.bytes  25.bytes  3.bytes  4.bytes  5.bytes  6.bytes  7.bytes  8.bytes  9.bytes  course.txt
examples/communicate/EStr "get index"/: response.expression
examples/communicate/EStr "get lambdaman11"/: request.bytes
examples/communicate/EStr "get lambdaman12"/: response.expression
examples/communicate/EStr "get lambdaman13"/: response.expression
examples/communicate/EStr "get lambdaman14"/: request.bytes
examples/communicate/EStr "get lambdaman16"/: request.bytes
examples/communicate/EStr "get lambdaman17"/: response.expression
examples/communicate/EStr "get lambdaman4"/: response.expression
examples/communicate/EStr "get lambdaman6"/: request.bytes
examples/communicate/EStr "get lambdaman7"/: request.bytes  response.expression
examples/communicate/EStr "get lambdaman8"/: request.bytes
examples/communicate/EStr "get lambdaman9"/: request.bytes
examples/communicate/EStr "get spaceship10"/: request.bytes
examples/communicate/EStr "get spaceship14"/: request.bytes
examples/communicate/EStr "get spaceship16"/: request.bytes
examples/communicate/EStr "get spaceship19"/: request.bytes
examples/communicate/EStr "get spaceship2"/: request.bytes
examples/communicate/EStr "get spaceship22"/: request.bytes
examples/communicate/EStr "get spaceship23"/: request.bytes
examples/communicate/EStr "get spaceship3"/: request.bytes
examples/communicate/EStr "get spaceship4"/: request.bytes
examples/communicate/EStr "get spaceship5"/: request.bytes
examples/communicate/EStr "get spaceship6"/: request.bytes
examples/communicate/EStr "get spaceship7"/: request.bytes  response.expression
examples/communicate/EStr "get spaceship8"/: request.bytes
examples/communicate/EStr "get spaceship9"/: request.bytes
examples/lambdaman/1/: solution.expression
examples/lambdaman/10/: solution.expression
examples/lambdaman/11/: solution.expression
examples/lambdaman/12/: solution.expression
examples/lambdaman/13/: solution.expression
examples/lambdaman/14/: solution.expression
examples/lambdaman/15/: solution.expression
examples/lambdaman/16/: problem.expression  solution.expression
examples/lambdaman/17/: solution.expression
examples/lambdaman/18/: problem.expression  solution.expression
examples/lambdaman/19/: solution.expression
examples/lambdaman/2/: solution.expression
examples/lambdaman/20/: solution.expression
examples/lambdaman/21/: solution.expression
examples/lambdaman/3/: problem.expression  solution.expression
examples/lambdaman/4/: solution.expression
examples/lambdaman/5/: solution.expression
examples/lambdaman/6/: problem.expression  solution.expression
examples/lambdaman/7/: solution.expression
src/: Codegen.hs  LambdaMan.hs  ProgCon.hs  Spaceship.hs
src/LambdaMan/: Pictures.hs  Types.hs
src/ProgCon/: API.hs  Eval.hs  Parser.hs  Printer.hs  Solve.hs  Submit.hs  Syntax.hs  Utils.hs
src/Spaceship/: Pictures.hs
test-suites/check/: Main.hs
(+322 files in other folders)
