cabal-version:       2.2
name:                progcon
version:             0.1.0
synopsis:            ICFP Programming Contest 2024
description:
        Short paragraph here
license:             MIT
license-file:        LICENSE
author:              JKRT team
maintainer:          JKRT team
copyright:           2024  JKRT team
category:            Unclassified
build-type:          Simple
extra-doc-files:     README.md
                     ChangeLog.md
tested-with:         GHC == 9.6.5

common common
  default-language:    GHC2021
  ghc-options:         -Wall -Wno-partial-type-signatures
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wno-unused-packages

  default-extensions:
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    PartialTypeSignatures
    OverloadedStrings
    OverloadedRecordDot
    DerivingStrategies
    MultiWayIf
    UnicodeSyntax
    ViewPatterns

executable progcon
  import:              common
  main-is:             Main.hs
  other-modules:       Paths_progcon
  hs-source-dirs:      app
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base < 5,
                       progcon

library
  import:              common
  build-depends:       base < 5
                     , MonadRandom < 3
                     , aeson < 3
                     , attoparsec < 42
                     , bytestring < 3
                     , containers
                     , directory < 3
                     , extra
                     , fmt
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-query
                     , http-types
                     , rio
                     , retry
                     , say
                     , scheduler
                     , simple-cmd-args
                     , simple-cmd
                     , text < 3
                     , time
                     , vector < 3
                     , pretty-simple
                     , time
                     , temporary

  exposed-modules:     ProgCon
                     , ProgCon.API
                     , ProgCon.Eval
                     , ProgCon.GUI
                     , ProgCon.Parser
                     , ProgCon.Solve
                     , ProgCon.Submit
                     , ProgCon.Syntax
                     , ProgCon.Utils
                     , Spaceship
  hs-source-dirs:      src

test-suite  checks
            import: common
            type: exitcode-stdio-1.0
            hs-source-dirs: test-suites/check
            main-is: Main.hs
            build-depends:
                        , base
                        , progcon
                        , rio
                        , tasty
                        , tasty-golden
                        , tasty-quickcheck
                        , transformers
                        , filepath
                        , quickcheck-instances
            default-extensions: NoImplicitPrelude
